# attorneys-website

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20240905023424_create_member_table.down.sql  20240905023424_create_member_table.up.sql  20240905023424_create_tables.down.sql  20240905023424_create_tables.up.sql  20250422083707_create_article_views.down.sql  20250422083707_create_article_views.up.sql
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/api/: api_error.rs  create_member.rs  delete_member.rs  get_member.rs  mod.rs  upload_member_image.rs
backend/src/api/article/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs  view.rs
backend/src/api/auth/: login.rs  logout.rs  mod.rs
backend/src/api/categories/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/api/contact/: create.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/api/home/: create.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/api/member/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs  upload_avatar.rs
backend/src/api/service/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/api/users/: change_password.rs
backend/src/configuration/: base.yaml  production.yaml  routes.yaml
backend/src/domain/: create_member.rs  delete_member.rs  entities.rs  get_member.rs  list_members.rs  mod.rs  test_helper.rs  update_member.rs  upload_avatar.rs
backend/src/domain/articles/: add_view.rs  mod.rs
backend/src/domain/home/: create.rs  entities.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/domain/member/: create.rs  delete.rs  entities.rs  list.rs  mod.rs  retrieve.rs  update.rs  upload_avatar.rs
backend/src/domain/resources/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  test_helpers.rs  update.rs
backend/src/domain/service/: create.rs  entities.rs  list.rs  mod.rs  retrieve.rs  update.rs
backend/src/domain/users/: authentication.rs  change_password.rs  create_user.rs  mod.rs
backend/src/models/: member.rs
backend/src/repositories/: article_views_repository.rs  avatar_repository.rs  content_repository.rs  home_repository.rs  member_repository.rs  mod.rs  resource_repository.rs  service_repository.rs  user_repository.rs
backend/src/uow/: home.rs  member.rs  member_uow.rs  mod.rs  resource.rs  service.rs
backend/src/utils/: image.rs
config/: nginx.conf  nginx.dev.conf
data/nginx/: nginx.prod.conf
dockerfiles/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.ui  Dockerfile.ui2
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  constants.scss
frontend/src/lib/components/: Avatar.svelte  Member.svelte  MemberCard.svelte  Members.svelte  avatar.svelte  member.svelte
frontend/src/lib/models/: member.ts
scripts/: init_db.sh  init_redis.sh
sql/: init.sql
ui/: .env  .prettierrc.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html  hooks.server.ts  safelist.txt
ui/src/lib/: constant.ts  services.ts  types.ts  utils.ts
ui/src/lib/components/: Article.svelte  ArticleCard.svelte  Avatar.svelte  Background.svelte  CategorySelector.svelte  Footer.svelte  Input.svelte  Loading.svelte  LoadingButton.svelte  Member.svelte  NavigateBar.svelte  (+7 more)
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/stores/: notificationStore.ts  userStore.ts
ui/src/styles/: global.scss  variables.scss
ui/static/: robots.txt  sitemap.xml
ui2/: .env  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
ui2/src/: app.css  app.html  safelist.txt
ui2/src/lib/: constant.ts  types.ts  utils.ts
ui2/src/routes/: +layout.svelte  +page.svelte
(+133 files in other folders)
