[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Boris <boris.lok.tw@outlook.com>"]

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
anyhow = "1.0.86"
ulid = "1.1.3"
axum = { version = "0.8.1", features = ["multipart"] }
axum-macros="0.5.0"
axum-extra = "0.10.0"
config = "0.15.4"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2.0.10"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors", "set-header"] }
sqlx = { version = "0.8.2", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
image = "0.25.2"
validator = { version = "0.19.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"
jsonwebtoken = "9.3.0"
redis = { version = "0.28.0", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing-log = "0.2.0"
