[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Boris <boris.lok.tw@outlook.com>"]

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
async-trait = "0.1.86"
anyhow = "1.0.95"
ulid = "1.1.4"
axum = { version = "0.8.1", features = ["multipart"] }
axum-macros = "0.5.0"
axum-extra = "0.10.0"
config = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "set-header"] }
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
image = "0.25.5"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4"] }
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.0"
jsonwebtoken = "9.3.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing-log = "0.2.0"
