[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Boris <boris.lok.tw@outlook.com>"]

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "generate_sitemap"
path = "src/bin/generate_sitemap.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
anyhow = "1.0.98"
ulid = "1.2.1"
axum = { version = "0.8.3", features = ["multipart"] }
axum-macros = "0.5.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
config = "0.15.11"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "set-header"] }
sqlx = { version = "0.8.5", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
image = "0.25.6"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.1"
jsonwebtoken = "9.3.1"
redis = { version = "0.30.0", features = ["tokio-comp"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing-log = "0.2.0"
